# CG-Backmapping-Mobility

./: README.md
LOE-CTP-FRAG/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/: CMakeLists.txt
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/ApproxMVBB_Build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/cmake/: GetGitRevisionDescriptionExtern.cmake  SetTargetCompileOptions.cmake  WriteConfigFile.cmake
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/lib/: CMakeLists.txt
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/tests/: CMakeLists.txt
LOE-CTP-FRAG/Approx_MVBB/ApproxMVBB/tmp/: meta-cfgcmd.txt  meta-gitclone.cmake  meta-gitupdate.cmake
LOE-CTP-FRAG/QC_Tools/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
LOE-CTP-FRAG/QC_Tools/QC_Tools_Build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
LOE-CTP-FRAG/QC_Tools/src/: calcJconfig.hpp  calculateTI.cpp  calculateTI.hpp
LOE-CTP-FRAG/QC_Tools/src/IO/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_argumentparser  test_io
LOE-CTP-FRAG/QC_Tools/src/MATRIX/: CTestTestfile.cmake  Makefile  cmake_install.cmake  matrix.cpp  matrix.hpp  test_matrix
LOE-CTP-FRAG/QC_Tools/src/PARAMETERS/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_parameters
LOE-CTP-FRAG/QC_Tools/src/QC_FUNCTIONS/: CTestTestfile.cmake  Makefile  cmake_install.cmake  qc_functions.cpp  qc_functions.hpp  test_qc_functions
LOE-CTP-FRAG/QC_Tools/src/STRING_SUPPORT/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_string_support
LOE-CTP-FRAG/example/: UNK.map  config.txt
LOE-CTP-FRAG/example/benzene/: UNL.map  benz.gro  config.txt
LOE-CTP-FRAG/example/benzene/results_0/: Mobility_dependance.txt  benz.grp  convergence_F-10000.000000_0.000000_0.000000_T300.000000_P0.002315.txt  convergence_F0.000000_-10000.000000_0.000000_T300.000000_P0.002315.txt  convergence_F0.000000_0.000000_-10000.000000_T300.000000_P0.002315.txt  convergence_F0.000000_0.000000_10000.000000_T300.000000_P0.002315.txt  convergence_F0.000000_10000.000000_0.000000_T300.000000_P0.002315.txt  convergence_F10000.000000_0.000000_0.000000_T300.000000_P0.002315.txt  distrib_F-10000.000000_0.000000_0.000000_T300.000000_P0.002315.txt  orientation.tcl  (+5 more)
LOE-CTP-FRAG/python/: fragment.py  fragment.py~  fragment_cubic.py  gaussian.py  monitor_gaussian.py
LOE-CTP-FRAG/scripts/: Check_GProgress.sh  Load_LOE_CTP_FRAG.sh
LOE-CTP-FRAG/scripts/Resource_loading/: Load_LOE_CTP_FRAG_kebnekaise.sh  Load_LOE_CTP_FRAG_nsc.sh
LOE-CTP-FRAG/src/: Graph.cpp  Graph.h  MeanField.cpp  MeanField.h  Parse.cpp  Parse.h  System.cpp  System.h  Units.cpp  Units.h  main.cpp
Scripts/: Compute_XRD.sh  Extract_Data.sh  (+10 more)
(+131 files in other folders)
